--- a/TODO
+++ b/TODO
@@ -1,12 +1,4 @@
-Document designation of occurrences (manual)
-Occurrence number also appear
-- in simplify coll_elim x1...xn  (currently handled in proba.ml, is_large_term)
-  Change the syntax to e.g. variables: ...; types: ...; points:...
-  to allow unambiguous designation, and parse it in instruct.ml.
-- similarly, in global_dep_anal coll_elim x1...xn
-- in crypto terms:
-=> DONE, to test
-Avoid using a temporary file.
+Occ numbers: Avoid using a temporary file.
 
 Allow insert find[unique], provided CryptoVerif manages to
 prove that the find is indeed unique.
