--- a/TODO
+++ b/TODO
@@ -906,9 +906,6 @@ transformation. In this case, we should move the generation of r
 upwards; it would end up being generated in the same block as hk,
 and we could then apply the game transformation as desired.
 
-examples/encryptBR93-1: 
-        Automate (see new definition of onewayness in examplesnd/bug).
-
 examplesnd/needham-schroeder-pkcorr3Block-improve-secrecyNa.cv:
 One could prove the secrecy of NaA/NaB by improving the 
 dependency analysis: there are equality tests between Na_270 and
@@ -3520,3 +3517,6 @@ DONE 12/10/2018
       DONE in ProVerif by V. Cheval.
       DONE in CryptoVerif 20/10/2018
       
+examples/encryptBR93-1: 
+        Automate (see new definition of onewayness in examplesnd/bug).
+DONE 3/11/2018 by adding priority [2] for pkgen(r) in ow(f).
