--- a/CHANGES
+++ b/CHANGES
@@ -7,7 +7,7 @@ Version
   "equivalence G1 G2 [public_vars x1, ..., xn]"
 - Completely revised the modeling of Diffie-Hellman assumptions.
   (Your protocol models that use Diffie-Hellman will need to be revised.)
-- The macro from random oracles with n arguments is now named
+- The macro for random oracles with n arguments is now named
   ROM_hash_n and is defined for n from 1 to 10. It optimizes the
   treatment of terms H(x1) = H(x2).
   (Your protocol models that use random oracles may need to be revised.)
@@ -15,6 +15,8 @@ Version
 - New macros PRF_large and PRF_large_n for n from 1 to 10,
   representing a PRF with a large output, that is, it optimizes the 
   definition by eliminating collisions between random output elements.
+- New macros random_split_n for n up to 10, to split a random
+  value into n independent random values.
 - Optimized treatment of enc(..) = .. in PRP, SPRP, and ICM. 
 - Added optional side conditions in equation and collision statements.
 - When a variable x is defined at several places by the same
