--- a/TODO
+++ b/TODO
@@ -291,26 +291,6 @@ in that session. Some difficulties:
    *any* session). It is much more powerful when it knows that
    there is a single tested session.
 
-   5/ I should also be able to tell CryptoVerif to focus on the
-   proof of some of the properties, prove them, and then go back
-   in order to prove other properties.
-   That would allow a stronger use of item 4/ above, by focusing
-   on some "required steps" only (possibly one).
-   DONE
-   notes:
-   - we cannot focus on an equivalence query.
-   This is not super useful, since anyway, we can prove equivalences
-   only last, when all events are removed. Furthermore, 
-   if we allowed proving equivalences with events in the middle,
-   focusing on the equivalence should not remove the events,
-   so it would not simplify the game anyway.
-   - TO DO right now, if I focus on a query whose proof depends on a
-   Shoup event e not proved yet, I may be able to prove the query,
-   but it will be forgotten when I do "undo focus". I should remember
-   the partial proof up to the point at which the event e was introduced.
-   (In doing that, remember that the proof of an event may depend
-   itself on other events...)
-
 * It does not work automatically with the logs as they presented.
 Investigate in more details why (perhaps a bad orientation of
 equalities?), and fix it.
@@ -3536,3 +3516,24 @@ DONE 6/12/2018
    simplifications for let, new, find are valid even if the
    newly defined variable(s) have array accesses.
 DONE 7/12/2018
+
+   5/ I should also be able to tell CryptoVerif to focus on the
+   proof of some of the properties, prove them, and then go back
+   in order to prove other properties.
+   That would allow a stronger use of item 4/ above, by focusing
+   on some "required steps" only (possibly one).
+   DONE
+   notes:
+   - we cannot focus on an equivalence query.
+   This is not super useful, since anyway, we can prove equivalences
+   only last, when all events are removed. Furthermore, 
+   if we allowed proving equivalences with events in the middle,
+   focusing on the equivalence should not remove the events,
+   so it would not simplify the game anyway.
+   - DONE right now, if I focus on a query whose proof depends on a
+   Shoup event e not proved yet, I may be able to prove the query,
+   but it will be forgotten when I do "undo focus". I should remember
+   the partial proof up to the point at which the event e was introduced.
+   (In doing that, remember that the proof of an event may depend
+   itself on other events...)
+DONE 28/1/2019
