--- a/CHANGES
+++ b/CHANGES
@@ -1,7 +1,7 @@
 This file summarizes the most important changes between versions
 of the cryptographic protocol verifier.
 
-Version
+Version 2.01
 
 - Allow proving indistinguishability between two games by
   "equivalence G1 G2 [public_vars x1, ..., xn]"
